Bug fixes on small phone

--- a/src/scss/layout/mobile/_burgerMobile.scss
+++ b/src/scss/layout/mobile/_burgerMobile.scss
@@ -77,7 +77,7 @@
       }
     }
   }  
-  @media screen and (max-width: 300px){
+  @media screen and (max-width: 330px){
       .nav-bar{
           ul{
               li{
